--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.13.2",
+    "dotenv": "^17.2.3",
     "vue": "^3.5.22"
   },
   "devDependencies": {
